fix airy dispersion correction factor, add swe and airy options

--- a/grids/input/large/config.json
+++ b/grids/input/large/config.json
@@ -3,5 +3,7 @@
     "seconds": 5,
     "separateFiles": true,
     "width": 128,
-    "height": 128
+    "height": 128,
+    "swe": false,
+    "airy": true
 }
