--- a/grids/input/medium/config.json
+++ b/grids/input/medium/config.json
@@ -1,7 +1,9 @@
 {
-    "fps": 30,
+    "fps": 60,
     "seconds": 5,
     "separateFiles": true,
     "width": 32,
-    "height": 32
+    "height": 32,
+    "swe": true,
+    "airy": true
 }
