--- a/grids/input/medium/config.json
+++ b/grids/input/medium/config.json
@@ -1,9 +1,10 @@
 {
     "fps": 30,
-    "seconds": 5,
+    "seconds": 10,
     "separateFiles": true,
     "width": 32,
     "height": 32,
     "swe": true,
-    "airy": true
+    "airy": false,
+    "useBuilder": true
 }
